stroop-macros/tests/compile_fails/missing_pattern.rs
use stroop_macros::pattern;

fn main() {
    pattern!(0, );
}
